--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@vueuse/core": "^13.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
+    "radix-vue": "^1.9.17",
+    "reka-ui": "^2.5.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.21",
@@ -38,7 +42,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@pinia/testing": "^1.0.2",
-    "@playwright/test": "^1.55.0",
+    "@playwright/test": "^1.55.1",
     "@tsconfig/node22": "^22.0.2",
     "@tailwindcss/vite": "^4.1.13",
     "@types/jsdom": "^21.1.7",
@@ -50,10 +54,10 @@
     "dependency-cruiser": "^17.0.1",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
-    "lefthook": "^1.13.2",
+    "lefthook": "^1.13.4",
     "naive-ui": "^2.43.1",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "^1.16.0",
+    "oxlint": "^1.17.0",
     "oxlint-tsgolint": "^0.2.0",
     "prettier": "3.6.2",
     "typescript": "~5.9.2",
