fix: add CSS variables to base.css for Tailwind compatibility

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "^20.19.0 || >=22.12.0"
+    "node": "^20.19.0 || >=22.12.0",
+    "bun": "^1.2.13"
   },
   "scripts": {
     "dev": "vite --open",
@@ -18,33 +19,37 @@
     "lint": "oxlint",
     "lint:type-aware": "oxlint --type-aware",
     "lint:fix": "oxlint --fix",
-    "prepare": "lefthook install"
+    "prepare": "lefthook install",
+    "preinstall": "npx only-allow bun"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
+    "@tanstack/vue-query": "^5.90.2",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.9.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
     "radix-vue": "^1.9.17",
-    "reka-ui": "^2.5.0",
+    "reka-ui": "^2.5.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.3.8",
+    "tw-animate-css": "^1.4.0",
     "vee-validate": "^4.15.1",
-    "vue": "^3.5.21",
+    "vue": "^3.5.22",
     "vue-router": "^4.5.1",
     "vue-sonner": "^2.0.8",
     "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/cli": "^20.0.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@pinia/testing": "^1.0.2",
     "@playwright/test": "^1.55.1",
-    "@tsconfig/node22": "^22.0.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^24.5.2",
     "@vitejs/plugin-vue": "^6.0.1",
@@ -57,7 +62,8 @@
     "lefthook": "^1.13.4",
     "naive-ui": "^2.43.1",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "^1.17.0",
+    "orval": "^7.11.2",
+    "oxlint": "^1.18.0",
     "oxlint-tsgolint": "^0.2.0",
     "prettier": "3.6.2",
     "typescript": "~5.9.2",
