--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "format": "prettier --write src/",
-    "lint": "oxlint",
+    "lint": "oxlint --ignore-pattern 'src/shared/api/client.ts'",
     "lint:type-aware": "oxlint --type-aware",
     "lint:fix": "oxlint --fix",
     "prepare": "lefthook install",
-    "preinstall": "npx only-allow bun"
+    "preinstall": "npx only-allow bun",
+    "gen:api": "orval --config ./orval.config.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
@@ -44,14 +45,15 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@commitlint/cli": "^20.0.0",
+    "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@tanstack/vue-query-devtools": "^5.90.2",
     "@pinia/testing": "^1.0.2",
     "@playwright/test": "^1.55.1",
     "@tailwindcss/vite": "^4.1.13",
     "@tsconfig/node22": "^22.0.2",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^24.5.2",
+    "@types/jsdom": "^27.0.0",
+    "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
     "@vue/test-utils": "^2.4.6",
@@ -59,11 +61,12 @@
     "dependency-cruiser": "^17.0.1",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
-    "lefthook": "^1.13.4",
+    "lefthook": "^1.13.6",
     "naive-ui": "^2.43.1",
     "npm-run-all2": "^8.0.4",
-    "orval": "^7.11.2",
-    "oxlint": "^1.18.0",
+    "orval": "^7.13.0",
+    "dotenv": "^17.2.3",
+    "oxlint": "^1.19.0",
     "oxlint-tsgolint": "^0.2.0",
     "prettier": "3.6.2",
     "typescript": "~5.9.2",
@@ -72,6 +75,6 @@
     "vite-bundle-analyzer": "^1.2.3",
     "vite-plugin-vue-devtools": "^8.0.2",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.0.8"
+    "vue-tsc": "^3.1.0"
   }
 }
