--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lint:fix": "oxlint --fix",
     "prepare": "lefthook install",
     "preinstall": "npx only-allow bun",
-    "gen:api": "orval --config ./orval.config.ts"
+    "gen:api": "orval --config ./orval.config.ts",
+    "test:vitest": "vitest run --config vitest.config.ts",
+    "test:playwright": "playwright test --config playwright.config.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
