--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ VITE_BASE_URL=/
 VITE_PORT=5173
 VITE_HOST=localhost
 VITE_PREVIEW_PORT=5000
-VITE_SWAGGER_URL=
-VITE_BACKEND_URL=
+VITE_SWAGGER_URL=http://localhost:4000/swagger/json
+VITE_BACKEND_URL=http://localhost:4000
