feat(Pagination): implement client pagination and dedupe meetings/me requests

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "format": "prettier --write src/",
-    "lint": "oxlint --ignore-pattern 'src/shared/api/client.ts'",
-    "lint:type-aware": "oxlint --type-aware",
-    "lint:fix": "oxlint --fix",
+    "lint": "oxlint --ignore-pattern 'src/shared/api/client.ts' --ignore-pattern 'src/shared/api/tanstack/client.ts'",
+    "lint:type-aware": "oxlint --type-aware --ignore-pattern 'src/shared/api/client.ts' --ignore-pattern 'src/shared/api/tanstack/client.ts'",
+    "lint:fix": "oxlint --fix --ignore-pattern 'src/shared/api/client.ts' --ignore-pattern 'src/shared/api/tanstack/client.ts'",
     "prepare": "lefthook install",
     "preinstall": "npx only-allow bun",
     "gen:api": "orval",
@@ -27,12 +27,17 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
+    "@tanstack/query-async-storage-persister": "^5.90.2",
+    "@tanstack/query-persist-client-core": "^5.90.2",
+    "@tanstack/query-sync-storage-persister": "^5.90.2",
     "@tanstack/vue-query": "^5.90.2",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.9.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
+    "idb-keyval": "^6.2.2",
     "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
     "radix-vue": "^1.9.17",
